--- a/nav.css
+++ b/nav.css
@@ -4,7 +4,7 @@ Author: Becky Roesch
 Course: IS_LT 7355 Web Design & Development
 University of Missouri, Summer 2025
 Created: June 25, 2025
-Last Updated: July 17, 2025
+Last Updated: July 23, 2025
 Tested: July 17, 2025 - Passed validation
 */
 
@@ -325,6 +325,9 @@ nav {
         border-radius: 0;
         position: relative;
         min-width: 120px;
+        line-height: 1.3 !important;
+        padding: 0.625rem 0.75rem !important;
+        white-space: normal;
     }
     
     /* Orange left border effect for submenu items */
